secondfile/objects/Rome_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>ATP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Authorization to Proceed - Used to indicate if a ROME Opportunity is read to be ordered.</description>
        <label>ATP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Automation_Complete_ATP__c</fullName>
        <formula>Opportunity_Name__r.Contract_Automation_Complete_ATP__c</formula>
        <label>Contract Automation Complete (ATP)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Check_Result__c</fullName>
        <label>Credit Check Result</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Rome_Opportunitys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <description>Placeholder for product family associated to a ROME opportunity ID</description>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROME_Credit_Check_Result__c</fullName>
        <label>ROME Credit Check Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rome_Opportunity_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Rome Opportunity ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Rome_Opportunity_Status__c</fullName>
        <label>Rome Opportunity Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>statusA</fullName>
                </value>
                <value>
                    <fullName>statusB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ROME Opportunity</label>
    <listViews>
        <fullName>All_Rome_Opportunities_Detail_View</fullName>
        <columns>NAME</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>Credit_Check_Result__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Product_Family__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Contract_Automation_Complete_ATP__c</columns>
        <columns>ROME_Credit_Check_Result__c</columns>
        <columns>Rome_Opportunity_ID__c</columns>
        <columns>Rome_Opportunity_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Rome Opportunities - Detail View</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Rome_Opportunities_Detail_View1</fullName>
        <columns>NAME</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>Product_Family__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Contract_Automation_Complete_ATP__c</columns>
        <columns>Credit_Check_Result__c</columns>
        <columns>ROME_Credit_Check_Result__c</columns>
        <columns>Rome_Opportunity_ID__c</columns>
        <columns>Rome_Opportunity_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Rome Opportunities - Detail View</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Rome Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ROME Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>